--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,8 +17,9 @@
 <script type="text/javascript" src="{{ "/styles/headroom.js" | prepend: site.baseurl }}"></script>
 <script type="text/javascript" src="{{ "/styles/jQuery.headroom.js" | prepend: site.baseurl }}"></script>
 <script> $(".my-footer").headroom(); </script>
-{% if site.g_analytics %}
+{% if jekyll.environment == 'production' and site.g_analytics != '' %}
 <script>
+
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
