--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,13 +12,20 @@
         {% endif %}
     </p>
 </footer>
+
 <script type="text/javascript" src="{{ "/styles/jquery.js" | prepend: site.baseurl }}"></script>
 <script type="text/javascript" src="{{ "/styles/mlz/mlz.js" | prepend: site.baseurl }}"></script>
 <script type="text/javascript" src="{{ "/styles/headroom.js" | prepend: site.baseurl }}"></script>
 <script type="text/javascript" src="{{ "/styles/jQuery.headroom.js" | prepend: site.baseurl }}"></script>
+
 <script> $(".my-footer").headroom(); </script>
 {% if jekyll.environment == 'production' and site.g_analytics != '' %}
 <script>
+
+  function getCookie(cname)
+  {var name=cname+"=";var ca=document.cookie.split(';');for(var i=0;i<ca.length;i++){var c=ca[i];while(c.charAt(0)==' '){c=c.substring(1)}
+  if(c.indexOf(name)==0){return c.substring(name.length,c.length)}}
+  return ""}
 
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -26,6 +33,9 @@
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
   ga('create', '{{ site.g_analytics }}', 'auto');
+  if( getCookie("username") == '{{ site.github_username }}' ) {
+    ga('set', 'User is Admin', 'true');
+  }
   ga('send', 'pageview');
 
 </script>
