Added about page

--- a/styles/main.css
+++ b/styles/main.css
@@ -243,6 +243,9 @@ a{
 .my-twitter-link:hover{
     color: #1da0f2;
 }
+.my-linkedin-link:hover{
+    color: #4875B4;
+}
 .my-github-link:hover{
     color: #e19e2f;
 }
