--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,24 +1,34 @@
 <footer class="my-footer z-depth-2">
     <p>
-        <a class="waves-effect waves-teal btn-flat my-imprint-link" href="{{ "/imprint.html" | prepend: site.baseurl }}">{{ site.imprint_btn }}</a>
+        <a class="waves-effect waves-teal btn-flat my-imprint-link" href="{{ "/pages/imprint.html" | prepend: site.baseurl }}">{{ site.imprint_btn }}</a>
         {% if site.email %}
         <a href="mailto:{{ site.email }}" class="waves-effect waves-teal btn-flat my-mail-link"><i class="fa fa-envelope-o"></i></a>
         {% endif %}
         {% if site.github_username %}
         <a href="https://github.com/{{ site.github_username }}" class="waves-effect waves-teal btn-flat my-github-link"><i class="fa fa-github"></i></a>
         {% endif %}
+        {% if site.linkedin_profile %}
+        <a href="https://www.linkedin.com/{{ site.linkedin_profile }}" class="waves-effect waves-teal btn-flat my-linkedin-link"><i class="fa fa-linkedin"></i></a>
+        {% endif %}
         {% if site.twitter_username %}
         <a href="https://twitter.com/{{ site.twitter_username }}" class="waves-effect waves-teal btn-flat my-twitter-link"><i class="fa fa-twitter"></i></a>
         {% endif %}
     </p>
 </footer>
+
 <script type="text/javascript" src="{{ "/styles/jquery.js" | prepend: site.baseurl }}"></script>
 <script type="text/javascript" src="{{ "/styles/mlz/mlz.js" | prepend: site.baseurl }}"></script>
 <script type="text/javascript" src="{{ "/styles/headroom.js" | prepend: site.baseurl }}"></script>
 <script type="text/javascript" src="{{ "/styles/jQuery.headroom.js" | prepend: site.baseurl }}"></script>
+
 <script> $(".my-footer").headroom(); </script>
 {% if jekyll.environment == 'production' and site.g_analytics != '' %}
 <script>
+
+  function getCookie(cname)
+  {var name=cname+"=";var ca=document.cookie.split(';');for(var i=0;i<ca.length;i++){var c=ca[i];while(c.charAt(0)==' '){c=c.substring(1)}
+  if(c.indexOf(name)==0){return c.substring(name.length,c.length)}}
+  return ""}
 
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -26,6 +36,9 @@
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
   ga('create', '{{ site.g_analytics }}', 'auto');
+  if( getCookie("username") == '{{ site.github_username }}' ) {
+    ga('set', 'User is Admin', 'true');
+  }
   ga('send', 'pageview');
 
 </script>
