Setting relative padding for social icons

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,17 +1,27 @@
 <footer class="my-footer z-depth-2">
     <p>
-        <a class="waves-effect waves-teal btn-flat my-imprint-link" href="{{ "/pages/imprint.html" | prepend: site.baseurl }}">{{ site.imprint_btn }}</a>
+        <a class="waves-effect waves-teal btn-flat my-imprint-link social-button-padding" href="{{ "/pages/imprint.html" | prepend: site.baseurl }}">
+          {{ site.imprint_btn }}
+        </a>
         {% if site.email %}
-        <a href="mailto:{{ site.email }}" class="waves-effect waves-teal btn-flat my-mail-link"><i class="fa fa-envelope-o"></i></a>
+        <a href="mailto:{{ site.email }}" class="waves-effect waves-teal btn-flat my-mail-link social-button-padding">
+          <i class="fa fa-envelope-o"></i>
+        </a>
         {% endif %}
         {% if site.github_username %}
-        <a href="https://github.com/{{ site.github_username }}" class="waves-effect waves-teal btn-flat my-github-link"><i class="fa fa-github"></i></a>
+        <a href="https://github.com/{{ site.github_username }}" class="waves-effect waves-teal btn-flat my-github-link social-button-padding">
+          <i class="fa fa-github"></i>
+        </a>
         {% endif %}
         {% if site.linkedin_profile %}
-        <a href="https://www.linkedin.com/{{ site.linkedin_profile }}" class="waves-effect waves-teal btn-flat my-linkedin-link"><i class="fa fa-linkedin"></i></a>
+        <a href="https://www.linkedin.com/{{ site.linkedin_profile }}" class="waves-effect waves-teal btn-flat my-linkedin-link social-button-padding">
+          <i class="fa fa-linkedin"></i>
+        </a>
         {% endif %}
         {% if site.twitter_username %}
-        <a href="https://twitter.com/{{ site.twitter_username }}" class="waves-effect waves-teal btn-flat my-twitter-link"><i class="fa fa-twitter"></i></a>
+        <a href="https://twitter.com/{{ site.twitter_username }}" class="waves-effect waves-teal btn-flat my-twitter-link social-button-padding">
+          <i class="fa fa-twitter"></i>
+        </a>
         {% endif %}
     </p>
 </footer>
