Setting header buttons padding relative

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,25 +1,25 @@
 <footer class="my-footer z-depth-2">
     <p>
-        <a class="waves-effect waves-teal btn-flat my-imprint-link social-button-padding" href="{{ "/pages/imprint.html" | prepend: site.baseurl }}">
+        <a class="waves-effect waves-teal btn-flat my-imprint-link button-bounds" href="{{ "/pages/imprint.html" | prepend: site.baseurl }}">
           {{ site.imprint_btn }}
         </a>
         {% if site.email %}
-        <a href="mailto:{{ site.email }}" class="waves-effect waves-teal btn-flat my-mail-link social-button-padding">
+        <a href="mailto:{{ site.email }}" class="waves-effect waves-teal btn-flat my-mail-link button-bounds">
           <i class="fa fa-envelope-o"></i>
         </a>
         {% endif %}
         {% if site.github_username %}
-        <a href="https://github.com/{{ site.github_username }}" class="waves-effect waves-teal btn-flat my-github-link social-button-padding">
+        <a href="https://github.com/{{ site.github_username }}" class="waves-effect waves-teal btn-flat my-github-link button-bounds">
           <i class="fa fa-github"></i>
         </a>
         {% endif %}
         {% if site.linkedin_profile %}
-        <a href="https://www.linkedin.com/{{ site.linkedin_profile }}" class="waves-effect waves-teal btn-flat my-linkedin-link social-button-padding">
+        <a href="https://www.linkedin.com/{{ site.linkedin_profile }}" class="waves-effect waves-teal btn-flat my-linkedin-link button-bounds">
           <i class="fa fa-linkedin"></i>
         </a>
         {% endif %}
         {% if site.twitter_username %}
-        <a href="https://twitter.com/{{ site.twitter_username }}" class="waves-effect waves-teal btn-flat my-twitter-link social-button-padding">
+        <a href="https://twitter.com/{{ site.twitter_username }}" class="waves-effect waves-teal btn-flat my-twitter-link button-bounds">
           <i class="fa fa-twitter"></i>
         </a>
         {% endif %}
