--- a/_layouts/tag-list.html
+++ b/_layouts/tag-list.html
@@ -2,14 +2,14 @@
 layout: default
 ---
 <article class="center-align">
-  <h2 class="my-mini-heading">Archive of posts with {{ page.type }} '{{ page.title }}'</h2>
+  <h2 class="my-mini-heading">{{ page.type | capitalize }} '{{ page.title }}'</h2>
 
   <div class="my-text-body">
     <ul class="posts">
 	  {% for post in page.posts %}
 	    <li>
 	      <span class="post-date">{{ post.date | date: "%b %-d, %Y" }}</span>
-	      <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+	      &nbsp;&nbsp;<a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
 	    </li>
 	  {% endfor %}
 	</ul>
