--- a/styles/main.css
+++ b/styles/main.css
@@ -284,3 +284,17 @@ img{
     padding-left: 5%;
     padding-right: 5%;
 }
+.embed-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+}
+.embed-container iframe, .embed-container object, .embed-container embed .embed-container img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
