--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,5 +38,6 @@
     <link rel="stylesheet" href="{{ "/styles/github-markdown.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ "/styles/fa/css/font-awesome.min.css" | prepend: site.baseurl }}">
     <script type="text/javascript" src="{{ "/styles/jquery.js" | prepend: site.baseurl }}"></script>
+    <script type="text/javascript" src="{{ "/styles/bootstrap.min.js" | prepend: site.baseurl }}"></script>
 
 </head>
