--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -2,20 +2,18 @@
   <!-- Indicators -->
   <ol class="carousel-indicators">
     {% for post in site.posts %}
-      <li data-target="#main-carousel" data-slide-to="{{ forloop.index0 }}" {% if forloop.first == true %} class="active"{% endif %}></li>
-      {% if forloop.index == 10 %}
-        {%break %}
+      {% if post.showcase == true %}
+        <li data-target="#main-carousel" data-slide-to="{{ forloop.index0 }}" {% if forloop.first == true %} class="active"{% endif %}></li>
       {%endif %}
     {% endfor %}
   </ol>
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     {% for post in site.posts %}
-      <div class="item{% if forloop.first == true %} active{% endif %}">
-        <a href="{{ site.baseurl}}{{ post.url }}"><img src="{{ post.thumbnail }}" alt="" class="img-responsive"></a>
-      </div>
-      {% if forloop.index == 10 %}
-        {%break %}
+      {% if post.showcase == true %}
+        <div class="item{% if forloop.first == true %} active{% endif %}">
+          <a href="{{ site.baseurl}}{{ post.url }}"><img src="{{ post.thumbnail }}" alt="" class="img-responsive"></a>
+        </div>
       {%endif %}
     {% endfor %}
   </div>
