--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,10 +1,29 @@
-<h2 class="my-mini-heading">{{ site.projects_btn }}</h2>
-<ul>
-	{% for project in site.data.projects %}
-		<li>
-		  <p class="my-item"><a href="{{ project.link }}" class="my-link">{{ project.name }}</a><br>
-		    {{ project.description }}
-		  </p>
-		</li>
+<div id="year-archive">
+	{%for post in site.posts %}
+
+	    {% unless post.next %}
+	        <h2 class="my-mini-heading">{{ post.date | date: '%Y' }}</h2>
+	        <ul>
+	    {% else %}
+	        {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
+	        {% capture nyear %}{{ post.next.date | date: '%Y' }}{% endcapture %}
+	        {% if year != nyear %}
+		        </ul>
+	            <h2 class="my-mini-heading" id="{{ year }}" test="{{ nyear }}">{{ post.date | date: '%Y' }}</h2>
+	            <ul>
+	        {% endif %}
+	    {% endunless %}
+
+	    {% if post.category != "Project" %}
+	        {% continue %}
+	    {% endif %}
+	    <li>
+	      <p class="my-item">
+	        <a href="{{ post.url | prepend: site.baseurl }}" class="my-link">{{ post.title }}</a><br>
+	        <span class="my-item-sub">{{ post.date | date: "%b %-d, %Y" }}</span><br>
+	        {{ post.content | strip_html | truncatewords: 20 }}
+	      </p>
+	    </li>
 	{% endfor %}
-</ul>
+	</ul>
+</div>
