--- a/_includes/year-archive.html
+++ b/_includes/year-archive.html
@@ -1,28 +1,29 @@
 <div id="year-archive">
-{%for post in site.posts %}
-    {% if post.category != "Post" %}
-        {% continue %}
-    {% endif %}
+    {%for post in site.posts %}
 
-    {% unless post.next %}
-        <h2 class="my-mini-heading">{{ post.date | date: '%Y' }}</h2>
-        <ul>
-    {% else %}
-        {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
-        {% capture nyear %}{{ post.next.date | date: '%Y' }}{% endcapture %}
-        {% if year != nyear %}
-            </ul>
+        {% unless post.next %}
             <h2 class="my-mini-heading">{{ post.date | date: '%Y' }}</h2>
             <ul>
+        {% else %}
+            {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
+            {% capture nyear %}{{ post.next.date | date: '%Y' }}{% endcapture %}
+            {% if year != nyear %}
+                </ul>
+                <h2 class="my-mini-heading" id="{{ year }}" test="{{ nyear }}">{{ post.date | date: '%Y' }}</h2>
+                <ul>
+            {% endif %}
+        {% endunless %}
+
+        {% if post.category != "Post" %}
+            {% continue %}
         {% endif %}
-    {% endunless %}
-    <li>
-      <p class="my-item">
-        <a href="{{ post.url | prepend: site.baseurl }}" class="my-link">{{ post.title }}</a><br>
-        <span class="my-item-sub">{{ post.date | date: "%b %-d, %Y" }}</span><br>
-        {{ post.content | strip_html | truncatewords: 20 }}
-      </p>
-    </li>
-{% endfor %}
-</ul>
+        <li>
+          <p class="my-item">
+            <a href="{{ post.url | prepend: site.baseurl }}" class="my-link">{{ post.title }}</a><br>
+            <span class="my-item-sub">{{ post.date | date: "%b %-d, %Y" }}</span><br>
+            {{ post.content | strip_html | truncatewords: 20 }}
+          </p>
+        </li>
+    {% endfor %}
+    </ul>
 </div>
